--- a/src/main/resources/templates/fragments/left-sidebar.html
+++ b/src/main/resources/templates/fragments/left-sidebar.html
@@ -106,6 +106,8 @@
                                     <li class="nav-item">
                                         <a class="nav-link text-white" th:href="@{/reports/profitLossData}">Profit/Loss Report</a></li>
                                     <li class="nav-item">
+                                        <a class="nav-link text-white" th:href="@{/reports/productProfitLoss}">Product/profitLoss</a></li>
+                                    <li class="nav-item">
                                         <a class="nav-link text-white" th:href="@{/reports/stockData}">Stock Report</a></li>
                                 </ul>
                             </div>
