--- a/src/main/resources/templates/report/product-profit-loss.html
+++ b/src/main/resources/templates/report/product-profit-loss.html
@@ -25,7 +25,7 @@
                                                             <thead>
                                                             <tr>
                                                                 <th scope="col">#</th>
-                                                                <th scope="col">product</th>
+                                                                <th scope="col">Product</th>
                                                                 <th scope="col">Profit/Loss</th>
                                                             </tr>
                                                             </thead>
